# my-launcher

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  NATIVE_HOST_SETUP.md  QUICK_SETUP.md  README.md  ROADMAP.md  WEBSOCKET_SETUP.md  build.bat  build.ps1  run_alt_tab_style.ps1  run_debug.bat  run_simple.bat  run_with_log.bat  test.bat  test.ps1  test_no_transparent.bat  todo.md
.cargo/: config.toml
chrome-extension/: README.md  background-ondemand.js  background.js  debug-tabs.js  manifest.json  test.html
src/: ipc.rs  lib.rs  logger.rs  main.rs  main_alt_tab.rs  native_host.rs  test_helpers.rs  test_window.rs  websocket_server.rs  websocket_types.rs  window_thumbnail.rs  windows_api.rs
src/core/: browser_search_engine.rs  launcher.rs  mod.rs  native_messaging.rs  search_engine.rs  window_manager.rs
src/data/: browser_item.rs  browser_provider.rs  mod.rs  tab_item.rs  tab_provider.rs  window_item.rs  window_provider.rs
src/filter/: mod.rs  search_filter.rs  window_filter.rs
src/ui/: alt_tab_grid.rs  browser_list.rs  mod.rs  window_grid.rs
tests/: integration_test.rs
