[package]
name = "my-launcher"
version = "0.1.0"
edition = "2021"

[features]
test-support = []
sqlite = ["rusqlite"]

[[bin]]
name = "my-launcher"
path = "src/main.rs"

[[bin]]
name = "my-launcher-alt-tab"
path = "src/main_alt_tab.rs"

[[bin]]
name = "test-window"
path = "src/test_window.rs"


[dependencies]
winit = "0.29"
egui = "0.24"
eframe = "0.24"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.0"
urlencoding = "2.1"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
lazy_static = "1.4"
url = "2.5"
rusqlite = { version = "0.30", features = ["bundled"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "shellapi", "dwmapi", "psapi", "processthreadsapi",
    "winnt", "handleapi", "errhandlingapi", "winbase", "wingdi",
    "memoryapi", "windef", "minwindef", "winerror", "sysinfoapi",
    "combaseapi", "objbase", "unknwnbase", "winerror"
] }
windows = { version = "0.52", features = [
    "Win32_Foundation", "Win32_UI_WindowsAndMessaging", 
    "Win32_Graphics_Dwm", "Win32_Graphics_Gdi",
    "Win32_System_Threading", "Win32_UI_Shell"
] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.release-windows]
inherits = "release"
panic = "abort"

# Windows specific settings
[package.metadata.winres]
OriginalFilename = "my-launcher.exe"
ProductName = "My Launcher"
FileDescription = "Custom Launcher Application"